compelet all execution logic